# world-cup-predictor

./: .gitignore  README.md
worldcup-predictor/: .dockerignore  .env.example  Dockerfile  Dockerfile.card-worker  README.md  alembic.ini  docker-compose.override.yml  docker-compose.s3.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
worldcup-predictor/deploy/charts/: .gitignore  README.md
worldcup-predictor/deploy/jwt-keys/: .gitignore
worldcup-predictor/deploy/nginx/: nginx.conf
worldcup-predictor/deploy/postgres-init/: 01-mlflow.sql
worldcup-predictor/deploy/scripts/: generate-jwt-keys.sh  scale_for_match_day.sh
worldcup-predictor/deploy/terraform/: main.tf
worldcup-predictor/docs/: M10_arbitrage_scanner_design.md  M9_5_live_hedging_flow.md  M9_hedging_module_design.md
worldcup-predictor/docs/deployment/: mlflow-s3-migration.md
worldcup-predictor/docs/security/: cn-payments-status.md
worldcup-predictor/frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
worldcup-predictor/frontend/public/: .gitkeep
worldcup-predictor/frontend/src/lib/: api.ts  (+7 more)
worldcup-predictor/java-api/: .dockerignore  Dockerfile  build.gradle  settings.gradle
worldcup-predictor/migrations/: env.py
worldcup-predictor/migrations/versions/: 20260501_0000_0001_initial_schema.py  20260502_1759_0002_phase2_ml_tables.py  20260502_1903_0003_phase3_business_tables.py  20260503_1000_0004_phase4_ml_reports_push.py  20260504_1000_0005_phase5_perf_indexes.py  20260512_2000_0006_phase4_m9_hedging.py  20260513_0900_0007_phase4_m9_positions.py  20260514_0900_0008_phase4_m10_arbitrage.py
worldcup-predictor/scripts/: backfill_historical.py  compute_features.py  generate_predictions.py  import_static_data.py  pull_odds_api.py  run_backtest.py  run_tournament_simulation.py  train_model.py  validate_data.py
worldcup-predictor/src/: celery_app.py
worldcup-predictor/src/adapters/: __init__.py  api_football.py  base.py  fbref.py  odds_api.py  odds_portal.py  static_data.py  transfermarkt.py
worldcup-predictor/src/api/: __init__.py  dependencies.py  main.py  middleware.py  rate_limit_redis.py
worldcup-predictor/src/config/: celery_config.py  kafka_config.py  settings.py
worldcup-predictor/src/content/: __init__.py  ai_report.py  card_generator.py  storage.py
worldcup-predictor/src/dto/: __init__.py  match.py  odds.py  player.py  stats.py
worldcup-predictor/src/events/: __init__.py  producer.py  schemas.py  topics.py
worldcup-predictor/src/ml/: __init__.py  prediction_service.py
worldcup-predictor/src/models/: __init__.py  analysis_report.py  arbitrage.py  base.py  competition.py  data_source_log.py  elo_rating.py  h2h_record.py  hedge_scenario.py  injury.py  match.py  match_feature.py  match_lineup.py  match_stats.py  odds_analysis.py  odds_snapshot.py  payment.py  player.py  player_stats.py  player_valuation.py  prediction.py  prediction_result.py  push.py  season.py  share_card.py  share_link.py  simulation_result.py  subscription.py  team.py  team_name_alias.py  track_record_stat.py  user.py  user_favorite.py  user_oauth.py  user_position.py
worldcup-predictor/src/pipelines/: __init__.py  base.py  match_pipeline.py  odds_pipeline.py  player_pipeline.py  stats_pipeline.py
worldcup-predictor/src/push/: __init__.py  base.py  dispatcher.py  email.py  stubs.py  web_push.py  wechat.py
worldcup-predictor/src/services/: __init__.py  cache.py  feature_flags.py  position_service.py
worldcup-predictor/src/tasks/: __init__.py  _async_runner.py  arb_scanner_tasks.py  card_tasks.py  live_monitor_tasks.py  maintenance_tasks.py  match_tasks.py  odds_tasks.py  phase4_tasks.py  prediction_tasks.py  settlement_tasks.py  stats_tasks.py
worldcup-predictor/src/utils/: db.py  elo.py  logging.py  name_mapping.py  proxy.py  quality_checks.py  rate_limiter.py  settlement.py  track_record.py  user_agents.py  validators.py  worker_health.py
worldcup-predictor/tests/: conftest.py  test_api_football_adapter.py  test_arb_calculator.py  test_arb_scanner.py  test_client_errors_route.py  test_fbref_adapter.py  test_fx_route.py  test_hedge_api.py  test_hedge_calculator.py  test_live_monitor_tasks.py  test_markets_route.py  test_match_detail_route.py  test_odds_api_adapter.py  test_odds_portal_adapter.py  test_opportunity_detector.py  test_phase2_integration.py  test_position_service.py  test_predictions_immutability_pg.py  test_rate_limit_redis.py  test_static_data_adapter.py  test_track_record_route.py  test_transfermarkt_adapter.py
(+407 files in other folders)
