[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "World Cup 2026 Predictor — data foundation, ML engine, FastAPI service"
requires-python = ">=3.11"

# Runtime deps live in requirements.txt; pyproject is currently used only by
# tooling configs (ruff / mypy / pytest).

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# --- Tooling ---

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    # `E501` — line-too-long. The formatter (when we wire it) handles this;
    # ruff's check doesn't autoformat, so failing CI on whitespace is noise.
    "E501",
    # `RUF001-003` — ambiguous Unicode in strings / docstrings / comments.
    # The project is bilingual (中文 in docstrings + i18n strings) and the
    # full-width punctuation flags here are intentional, not bugs.
    "RUF001",
    "RUF002",
    "RUF003",
    # `B008` — function calls in argument defaults. FastAPI's `Depends(...)`
    # idiom is built on exactly this pattern, so the rule fights the framework.
    "B008",
    # `B905` — `zip(strict=True)`. Pedantic; we audit zip call-sites manually
    # for length-mismatch risk.
    "B905",
    # `N806` / `N818` — naming. `HomeTeam = Match.__table__.alias(...)` is a
    # SQLAlchemy idiom that flags here; the alias name is intentionally
    # PascalCase to match the entity it stands for.
    "N806",
    "N818",
]

[tool.ruff.lint.per-file-ignores]
# Tests get more idiom freedom: snake_case helper classes inside fixtures
# (N805) and assert-style code that occasionally trips other rules.
"tests/**/*.py" = ["N805", "N806", "B904", "SIM105", "RUF007", "RUF034", "UP042"]

[tool.mypy]
# Pragmatic baseline rather than `strict = true`: catches Any-leaks +
# return-type lies + obvious bugs, but doesn't punish every untyped
# decorator (celery `@app.task` has no stubs) or library missing a .pyi.
# Tighten incrementally once the obvious findings are fixed; for now
# the goal is "no false positives that block CI."
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
# Silence at the codepath level:
# - `untyped-decorator` / `no-untyped-call` — celery `@app.task` has no
#   stubs upstream; every task function inherits this noise.
# - `var-annotated` — suggesting type hints, not bug-finding.
disable_error_code = ["untyped-decorator", "no-untyped-call", "var-annotated"]

# Modules that pre-date the typing push are marked advisory so mypy
# can still block CI on *new* code without us having to rewrite the
# whole back catalogue. Remove an override as the module gets typed.
[[tool.mypy.overrides]]
module = [
    "src.adapters.fbref",
    "src.adapters.transfermarkt",
    "src.api.rate_limit_redis",
    "src.api.routes.fx",
    "src.api.routes.matches",
    "src.api.routes.predictions",
    "src.ml.features.attack_defense",
    "src.ml.models.poisson",
    "src.ml.models.xgboost_model",
    "src.pipelines.base",
    "src.pipelines.match_pipeline",
    "src.tasks.prediction_tasks",
    "src.utils.quality_checks",
    "src.utils.settlement",
    "src.utils.track_record",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra"
timeout = 60
